--- a/package.json
+++ b/package.json
@@ -7,10 +7,18 @@
     "start": "node server.js",
     "dev": "node server.js"
   },
-  "keywords": ["dashboard", "productivity", "os", "dark-mode"],
+  "keywords": [
+    "dashboard",
+    "productivity",
+    "os",
+    "dark-mode"
+  ],
   "author": "Jarvis Aqulos",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "mkcert": "^3.2.0"
   }
 }
